// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`submitAnonymousVote emits error when not registered 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Du er ikke registert",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitAnonymousVote emits error when trying to vote with canVote false 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {},
      "error": "You do not have the right to vote",
      "type": "ADD_VOTE",
    },
  ],
]
`;

exports[`submitAnonymousVote emits error with insufficient permissions 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Brukeren har ikke riktig rettigheter",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitAnonymousVote emits vote 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": undefined,
        "alternative": undefined,
        "question": undefined,
        "user": undefined,
      },
      "type": "ADD_VOTE",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "voted": true,
      },
      "type": "VOTED_STATE",
    },
  ],
]
`;

exports[`submitRegularVote broadcasts vote 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": undefined,
        "alternative": undefined,
        "question": undefined,
        "user": undefined,
      },
      "type": "ADD_VOTE",
    },
  ],
]
`;

exports[`submitRegularVote emits error when not registered 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Du er ikke registert",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitRegularVote emits error when trying to vote with canVote false 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {},
      "error": "Storing vote failed.",
      "type": "ADD_VOTE",
    },
  ],
]
`;

exports[`submitRegularVote emits error with insufficient permissions 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Brukeren har ikke riktig rettigheter",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitRegularVote emits vote 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": undefined,
        "alternative": undefined,
        "question": undefined,
        "user": undefined,
      },
      "type": "ADD_VOTE",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "voted": true,
      },
      "type": "VOTED_STATE",
    },
  ],
]
`;
